[project]
name = "lifeline-arya"
version = "0.1.0"
description = "Arya — AI voice agent for blood-donor recruitment (Twilio ConversationRelay + GPT-4.1)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "twilio>=9.3",
    "openai>=1.54",
    "python-dotenv>=1.0",
    "websockets>=13",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[tool.uv]
package = false
